--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    //buildFeatures {
+    //    compose true
+    //}
+    //composeOptions {
+    //        kotlinCompilerExtensionVersion '1.4.3'
+    //}
+    //packagingOptions {
+    //    resources {
+    //        excludes += '/META-INF/{AL2.0,LGPL2.1}'
+    //    }
+    //}
 }
 
 dependencies {
@@ -42,6 +54,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+    //implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    //implementation 'androidx.activity:activity-compose:1.5.1'
+    //implementation platform('androidx.compose:compose-bom:2022.10.00')
+    //implementation 'androidx.compose.ui:ui'
+    //implementation 'androidx.compose.ui:ui-graphics'
+    //implementation 'androidx.compose.ui:ui-tooling-preview'
+    //implementation 'androidx.compose.material3:material3'
+    //implementation 'androidx.core:core-ktx:+'
+    // 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -50,7 +71,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+    //androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    //debugImplementation 'androidx.compose.ui:ui-tooling'
+    //debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
