--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    //ext {
+    //    kotlin_version = '1.8.10'
+    //}
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
@@ -8,6 +11,8 @@ buildscript {
     dependencies {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
+        //classpath 'com.android.tools.build:gradle:1.8.10'
+        //classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10"
     }
 }
 
