--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PartyApp"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCQ_IvCY499kkty1Zjneg33b3GUtus5RC4"/>
+
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
