--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,14 +47,15 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
-    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
-    implementation 'com.google.android.libraries.places:places:2.5.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:22.1.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
+    implementation 'com.google.android.libraries.places:places:3.2.0'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.2.0'
     //implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     //implementation 'androidx.activity:activity-compose:1.5.1'
     //implementation platform('androidx.compose:compose-bom:2022.10.00')
@@ -80,6 +81,8 @@ dependencies {
     //debugImplementation 'androidx.compose.ui:ui-tooling'
     //debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.maps:google-maps-services:0.17.0'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 }
